[metadata]
name = HealthyWork
author = singein
author-email = singein@outlook.com
summary = healthy work.
license = MIT
description-file =
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages =
    HealthyWork


[entry_points]
console_scripts =
    cmd=package.module:function
