[metadata]
name = healthywork
author = singein
author-email = singein@outlook.com
summary = healthy work.
license = MIT
description-file =
    README.rst
home-page = https://github.com/Singein/Healthy-Work
requires-python = >= 3.6

[files]
packages =
    HealthyWork


[entry_points]
console_scripts =
    runhw=HealthyWork.main:run_app
